--- a/css/froala_style.css
+++ b/css/froala_style.css
@@ -3,7 +3,7 @@
  * License http://editor.froala.com/license
  * Copyright 2014-2015 Froala Labs
  */
-.clearfix:after {
+.clearfix::after {
   clear: both;
   display: block;
   content: "";
@@ -48,7 +48,7 @@
 .fr-view .fr-file {
   position: relative;
 }
-.fr-view .fr-file:after {
+.fr-view .fr-file::after {
   position: relative;
   content: "\1F4CE";
 }
