--- a/css/plugins/colors.css
+++ b/css/plugins/colors.css
@@ -13,6 +13,9 @@
   -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   margin-bottom: 5px;
+  line-height: 16px;
+  margin-left: -2px;
+  margin-right: -2px;
 }
 .fr-popup .fr-colors-tabs .fr-colors-tab {
   display: inline-block;
@@ -48,6 +51,13 @@
   -moz-transform: translate3d(-100%, 0, 0);
   -ms-transform: translate3d(-100%, 0, 0);
   -o-transform: translate3d(-100%, 0, 0);
+}
+.fr-popup .fr-separator + .fr-colors-tabs {
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  margin-left: 2px;
+  margin-right: 2px;
 }
 .fr-popup .fr-color-set {
   line-height: 0;
