Horizontal Line supports Page Break.

--- a/css/froala_style.css
+++ b/css/froala_style.css
@@ -44,6 +44,7 @@
   -khtml-user-select: none;
   -webkit-user-select: none;
   -ms-user-select: none;
+  page-break-after: always;
 }
 .fr-view .fr-file {
   position: relative;
