--- a/css/plugins/file.css
+++ b/css/plugins/file.css
@@ -39,8 +39,9 @@
   right: 0;
   z-index: 9999;
   overflow: hidden;
-  margin: 0;
-  padding: 0;
+  margin: 0 !important;
+  padding: 0 !important;
+  width: 100% important;
 }
 .fr-file-upload-layer form input {
   cursor: pointer;
