--- a/css/plugins/image.css
+++ b/css/plugins/image.css
@@ -126,8 +126,9 @@
   right: 0;
   z-index: 9999;
   overflow: hidden;
-  margin: 0;
-  padding: 0;
+  margin: 0 !important;
+  padding: 0 !important;
+  width: 100% important;
 }
 .fr-image-upload-layer form input {
   cursor: pointer;
