--- a/css/plugins/image.css
+++ b/css/plugins/image.css
@@ -128,7 +128,7 @@
   overflow: hidden;
   margin: 0 !important;
   padding: 0 !important;
-  width: 100% important;
+  width: 100% !important;
 }
 .fr-image-upload-layer form input {
   cursor: pointer;
