Table style and horizontal alignment.

--- a/css/froala_style.css
+++ b/css/froala_style.css
@@ -22,6 +22,15 @@
   empty-cells: show;
   max-width: 100%;
 }
+.fr-view table.fr-blue-header th {
+  background: #d5e9fa;
+}
+.fr-view table.fr-blue-header th:not(.fr-selected-cell) {
+  border-color: #79b8f0;
+}
+.fr-view table.fr-alternate-rows tbody tr:nth-child(2n) {
+  background: #f5f5f5;
+}
 .fr-view table td,
 .fr-view table th {
   border: 1px solid #dddddd;
@@ -32,7 +41,7 @@
 }
 .fr-view table td.fr-highlighted,
 .fr-view table th.fr-highlighted {
-  border-color: red;
+  border: 1px double red;
 }
 .fr-view table td.fr-thick,
 .fr-view table th.fr-thick {
