--- a/css/plugins/fullscreen.css
+++ b/css/plugins/fullscreen.css
@@ -1,8 +1,9 @@
 /*!
  * froala_editor v2.0.1 (https://www.froala.com/wysiwyg-editor)
- * License http://editor.froala.com/license
+ * License https://froala.com/wysiwyg-editor/terms
  * Copyright 2014-2015 Froala Labs
  */
+
 body.fr-fullscreen {
   overflow: hidden;
   height: 100%;
