--- a/css/themes/dark.css
+++ b/css/themes/dark.css
@@ -375,14 +375,14 @@
 .dark-theme.fr-popup .fr-checkbox input:focus + span {
   border-color: #42a5f5;
 }
-.dark-theme.fr-popup.fr-desktop::before {
+.dark-theme.fr-popup.fr-desktop .fr-arrow {
   border-left: 5px solid transparent;
   border-right: 5px solid transparent;
   border-bottom: 5px solid #222222;
   top: -9px;
   margin-left: -5px;
 }
-.dark-theme.fr-popup.fr-desktop.fr-above::before {
+.dark-theme.fr-popup.fr-desktop.fr-above .fr-arrow {
   bottom: -9px;
   border-top-width: 5px;
 }
@@ -403,7 +403,7 @@
   border: 0px;
   border-top: 5px solid #222222;
 }
-.dark-theme.fr-toolbar.fr-inline.fr-desktop::before {
+.dark-theme.fr-toolbar.fr-inline.fr-desktop .fr-arrow {
   border-left: 5px solid transparent;
   border-right: 5px solid transparent;
   border-bottom: 5px solid #222222;
@@ -416,7 +416,7 @@
   -moz-box-shadow: 0 -1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   box-shadow: 0 -1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
-.dark-theme.fr-toolbar.fr-inline.fr-desktop.fr-above::before {
+.dark-theme.fr-toolbar.fr-inline.fr-desktop.fr-above .fr-arrow {
   bottom: -9px;
   border-top-width: 5px;
 }
@@ -648,6 +648,8 @@
 .dark-theme table td.fr-selected-cell,
 .dark-theme table th.fr-selected-cell {
   border: 1px double #42a5f5;
+  background: #b5d6fd !important;
+  color: #000000 !important;
 }
 .dark-theme .fr-table-resizer div {
   border-right: 1px solid #42a5f5;
